# TDD-Calculator

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  test.yml
api/: app.py
scripts/: format-imports.sh  format.sh  lint.sh
src/: calculator.py  converters.py  validators.py
src/actions/: actions.py
src/domain/: converters.py  exceptions.py  model.py  validators.py
src/entrypoints/api/: app.py
src/service_layer/: converters.py  exceptions.py  services.py  validators.py
test/: conftest.py  test_add.py  test_divider.py  test_multiply.py  test_subtract.py
test/e2e/: test_api.py
test/unit/: test_model.py  test_services_add.py  test_services_divide.py  test_services_multiply.py  test_services_subtract.py
