[tool.poetry]
name = "calculator"
version = "0.1.0"
description = "TDD learning"
authors = ["Shahriyar Rzayev <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
pytest = ">=7.1.2"
flask = ">=2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"