[tool.poetry]
name = "calculator"
version = "0.1.0"
description = "TDD learning"
authors = ["Shahriyar Rzayev <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
pytest = ">=7.1.2"
flask = ">=2.1.1"

[tool.poetry.dev-dependencies]
black = ">=22.3.0"
pylint = ">=2.12.2"
isort = ">=5.9.3"
autoflake = ">=1.4"
flake8 = ">=4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"